added water button

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <button data-section="viewAll">3. View All Sensor Data</button>
   <button data-section="updateRecord">4. Update a Record by Timestamp</button>
   <button data-section="deleteRecord">5. Delete a Record by Timestamp</button>
-  <button id="btnPredictWater">6. Check Water Status</button>
+  <button data-section="btnPredictWater">6. Check Water Status</button>
 
 </div>
 
@@ -67,10 +67,7 @@
     <label>Potassium (K): <input type="number" name="K" /></label>
     <button type="submit">Update Record</button>
   </form>
-  <div id="predictWaterOutput" class="section">
-    <h2>Water Status Prediction</h2>
-    <button id="checkWaterBtn">Check Now</button>
-  </div>
+  
   
 </div>
 
@@ -83,6 +80,12 @@
     </label>
     <button type="submit">Delete Record</button>
   </form>
+</div>
+
+<!-- Predict Water Status -->
+<div id="predictWaterOutput" class="section">
+  <h2>Water Status Prediction</h2>
+  <button id="checkWaterBtn">Check Now</button>
 </div>
 
 <div id="output"></div>
